# ProtoPluginDotnet

./: .prototools  .prototools.example  Cargo.toml  README.md
.github/workflows/: release.yml
src/: config.rs  lib.rs  metadata.rs  proto.rs
